test directory cargo

--- a/WEB_UI/Content/view/directory/home.css
+++ b/WEB_UI/Content/view/directory/home.css
@@ -1,4 +1,5 @@
 ﻿body {
+
 }
 
 .btn{
@@ -8,4 +9,10 @@
 
 .warning {
     color:red;
+}
+
+input {
+    margin:0;
+    padding:0;
+    font:initial;
 }
