--- a/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
@@ -43,7 +43,7 @@
 </div>
 
 <div id="change_group" title="" style="display:none">
-    <div class="alert" id="change_group-alert"></div>
+    <div class="alert" id="change_group_alert"></div>
     <form id="form-change_group">
         <div class="form-group row" style="margin-bottom:0.5rem">
             <label for="change_group_cargo_group" class="col-sm-5 col-form-label">@DirectoryResource.title_change_group_cargo_group:</label>
@@ -59,4 +59,67 @@
     </form>
 </div>
 
+<div id="add_edit" title="" style="display:none">
+    <div class="alert" id="add_edit_alert"></div>
+    <form id="form_add_edit">
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="add_edit_cargo_group" class="col-sm-5 col-form-label">@DirectoryResource.title_change_group_cargo_group:</label>
+            <div class="col-sm-7">
+                <select class="form-control" id="add_edit_cargo_group" name="add_edit_cargo_group" required="required"></select>
+                <div class="invalid-feedback">
+
+                </div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="add_edit_cargo_etsng" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_cargo_etsng:</label>
+            <div class="col-sm-7">
+                <select class="form-control" id="add_edit_cargo_etsng" name="add_edit_cargo_etsng" required="required"></select>
+                <div class="invalid-feedback">
+
+                </div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="add_edit_cargo_name_ru" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_cargo_name_ru:</label>
+            <div class="col-sm-7">
+                <textarea class="form-control" id="add_edit_cargo_name_ru" name="add_edit_cargo_name_ru" required="required"></textarea> 
+                <div class="invalid-feedback">
+
+                </div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="add_edit_cargo_name_en" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_cargo_name_en:</label>
+            <div class="col-sm-7">
+                <textarea class="form-control" id="add_edit_cargo_name_en" name="add_edit_cargo_name_en" required="required"></textarea> 
+                    <div class="invalid-feedback">
+
+                    </div>
+</div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="add_edit_code_sap" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_code_sap:</label>
+            <div class="col-sm-7">
+                <input type="text" class="form-control" id="add_edit_code_sap" name="add_edit_code_sap">
+                <div class="invalid-feedback">
+
+                </div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <div class="custom-control custom-checkbox offset-5 col-sm-7">
+                @*<input type="checkbox" class="custom-control-input" id="add_edit_sending" required>
+                <label class="custom-control-label" for="add_edit_sending">@DirectoryResource.title_add_edit_sending</label>*@
+                <input type="checkbox" class="" id="add_edit_sending" required>
+                <label class="" for="add_edit_sending">@DirectoryResource.title_add_edit_sending</label>
+                <div class="invalid-feedback">
+
+                </div>
+            </div>
+        </div>
+        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+    </form>
+</div>
 
