--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -72,7 +72,7 @@
                             <li class="go-back"><a href="#0">Справочники ИДС</a></li>
                             <li class="see-all"><a href="#">Грузы</a></li>
                             <li><a href='@Url.Action("Cargo", "Home", new { Area = "Directory" })'>Грузы</a></li>
-                            <li><a href="#">Группы грузов</a></li>
+                            <li><a href='@Url.Action("CargoGroup", "Home", new { Area = "Directory" })'>Группы грузов</a></li>
                             <li><a href="#">Грузы ЕТ СНГ</a></li>
                             <li><a href="#">Грузы ГНГ</a></li>
                             <li><a href="#">Сертификационные данные</a></li>
