--- a/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
@@ -16,6 +16,8 @@
     <script src="~/Scripts/api/shared.js"></script> <!-- Общая библиотека методов API -->
     <script src="~/Scripts/api/ids_directory.js"></script> <!-- Class API ИДС Справочники -->
 
+    <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
+
     <script src="~/Scripts/view/directory/cargo.js"></script> <!--  -->
 }
 
@@ -36,11 +38,13 @@
     </div>
 </div>
 
-<div id="dialog-confirm" title="Empty the recycle bin?" style="display:none">
+<div id ="dialog-confirm"></div>
+
+@*<div id="dialog-confirm" title="Empty the recycle bin?" style="display:none">
     <p id="dialog-confirm-text">
         <span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
     </p>
-</div>
+</div>*@
 
 <div id="change_group" title="" style="display:none">
     <div class="alert" id="change_group_alert"></div>
