--- a/WEB_UI/Areas/Directory/Views/Home/CargoGroup.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/CargoGroup.cshtml
@@ -23,6 +23,8 @@
 
 <input id="username" type="hidden" value="@User.Identity.Name" />
 
-<div id="dc"></div>
+<div id="dae"></div>
+
+<div id="wae"></div>
 
 <button id="test">test</button>
