--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -181,10 +181,10 @@
                                 <div class="card-header">Информация о вагоне</div>
                                 <div class="card-body text-dark">
                                     <button type="button" class="btn btn-primary btn" id="arrival-car" data-mode="edit-global" data-edit="" data-form="transceiver"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Принять вагон</button>
-                                    @*<button type="button" class="btn btn-warning btn" id="mode-view">View</button>
+                                    @*<button type="button" class="btn btn-warning btn" id="mode-view">View</button>*@
                                     <button type="button" class="btn btn-warning btn" id="mode-edit">Edit</button>
-                                    <button type="button" class="btn btn-success btn" id="mode-open">Open</button>
-                                    <button type="button" class="btn btn-success btn" id="mode-close">Close</button>*@
+                                    @*<button type="button" class="btn btn-success btn" id="mode-open">Open</button>
+    <button type="button" class="btn btn-success btn" id="mode-close">Close</button>*@
                                     <fieldset class="border-primary">
                                         <div class="form-row">
                                             <div class="col-md-3 mb-1 text-left">
