--- a/WEB_UI/Content/view/idsrwt/incoming.css
+++ b/WEB_UI/Content/view/idsrwt/incoming.css
@@ -70,6 +70,117 @@ div.dt-buttons a {
         .date-picker-wrapper .gap .gap-bottom-mask {
             z-index: 203;
         }
+
+        
+
+/* -------------------------------- 
+
+print  detali panel 
+
+-------------------------------- */
+.cd-print-detali {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    background-color: #ebebeb;
+    /* Force Hardware Acceleration */
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    -o-transform: translateY(100%);
+    transform: translateY(100%);
+    -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0.4s;
+    -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0.4s;
+    transition: transform 0.4s 0s, visibility 0s 0.4s;
+    -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+    -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+    transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+}
+
+    .cd-print-detali > div {
+        height: 100%;
+        overflow-y: auto;
+        padding: 4em 2em;
+    }
+
+    .cd-print-detali.is-visible {
+        visibility: visible;
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0s;
+        -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0s;
+        transition: transform 0.4s 0s, visibility 0s 0s;
+        -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+        -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+        transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
+    }
+
+        .cd-print-detali.is-visible > div {
+            /* smooth scrolling on iOS */
+            -webkit-overflow-scrolling: touch;
+        }
+
+    /*.cd-print-detali p {
+        margin-bottom: 1em;
+        font-size: 1.4rem;
+        color: #6f757c;
+        line-height: 1.6;
+        font-weight:400;
+    }*/
+
+    .cd-print-detali .close {
+        display: block;
+        height: 32px;
+        width: 32px;
+        position: absolute;
+        top: 80px;
+        right: 3%;
+        background: url(../../../Images/cd/cd-close-dark.svg) no-repeat center center;
+    }
+
+.cd-img-replace {
+    /* replace text with image */
+    color: transparent;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+
+/*@media only screen and (min-width: 900px) {
+    .cd-print-detali h2 {
+        font-size: 4rem;
+    }
+
+    .cd-print-detali em {
+        font-size: 2.4rem;
+    }
+
+    .cd-print-detali p {
+        font-size: 1.8rem;
+    
+
+    .cd-print-detali .close {
+        top: 80px;
+        right: 2%;
+    }
+}*/
+
+#print_frame{display: none;}
+
 /* -------------------------------- 
 
 cars detali panel 
@@ -175,6 +286,8 @@ cars detali panel
         right: 2%;
     }
 }*/
+
+
 
 .cd-form {
     width: 90%;
